test/asm/section-in-load.err
error: section-in-load.asm(4):
    Found `ENDL` outside of a `LOAD` block
error: Assembly aborted (1 error)!
